--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && scp -r ./build/* kerka377@178.154.222.17:/react-mesto-api-full/frontend" 
   },
   "eslintConfig": {
     "extends": [
