--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "gh-pages": "^3.2.3",
     "mongoose": "^5.13.3",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -20,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "npm run build && scp -r ./build/* kerka377@178.154.222.17:/react-mesto-api-full/frontend" 
+    "deploy": "npm run build && scp -r ./build/* kerka377@178.154.222.17:~/react-mesto-api-full/frontend"
   },
   "eslintConfig": {
     "extends": [
